--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,27 @@
-.App {
-  text-align: center;
+button {
+  padding: 1.0625rem 1.9375rem;
+  font-size: 1rem;
+  border-radius: 0.2rem;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+button.primary {
+  color: #fff;
+  background-color: #62c2cf;
+  border: none;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+button.primary:hover {
+  background-color: #52a5b1;
 }
 
-.App-title {
-  font-size: 1.5em;
+button.secondary {
+  border: 1px solid #c3c8cd;
+  background-color: #fff;
+  color: #2d3237;
+  cursor: pointer;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+button.secondary:hover {
+  background-color: #c3c8cd;
 }
