--- a/src/Routes/Home/Home.css
+++ b/src/Routes/Home/Home.css
@@ -1,4 +1,4 @@
-.home-container {
+.location-container {
   text-align: center;
 }
 
@@ -7,5 +7,5 @@
 }
 
 .home-container .title-container {
-  font-size: 2em;
+  font-size: 50px;
 }
