--- a/src/Routes/LocationList/LocationList.scss
+++ b/src/Routes/LocationList/LocationList.scss
@@ -2,7 +2,9 @@
   text-align: center;
   padding-top: 50px;
   font-family: Lato;
-  font-size: 25px; }
+  font-size: 25px;
+}
 
 .location-container .list-container {
-  text-align: left; }
+  text-align: left;
+}
