--- a/src/App.css
+++ b/src/App.css
@@ -233,6 +233,7 @@ select[multiple] {
   color: #e2550e; }
 
 input:not(.btn) {
+  max-width: 100%;
   padding: 0.75rem 0 0.75rem 1.125rem !important;
   border-radius: 0.2rem !important;
   border: 1px solid #c3c8cd !important;
