--- a/src/Routes/Home/Home.css
+++ b/src/Routes/Home/Home.css
@@ -5,6 +5,7 @@
   color: #e2550e; }
 
 input:not(.btn) {
+  max-width: 100%;
   padding: 0.75rem 0 0.75rem 1.125rem !important;
   border-radius: 0.2rem !important;
   border: 1px solid #c3c8cd !important;
@@ -61,17 +62,35 @@ input:focus {
   padding: 1.125rem 2.8125rem;
   font-size: 1rem; }
 
-.section-wrapper {
-  width: 100%; }
-  .section-wrapper > input,
-  .section-wrapper button {
+.home-container > div:first-child {
+  margin-top: 10vh; }
+
+.home-container .input-wrapper {
+  width: 99.5%;
+  padding: 0 1.125rem 0 0 !important; }
+  .home-container .input-wrapper input {
     width: 100%; }
 
-.location-container {
+.home-container .section-wrapper {
+  width: 100%; }
+  .home-container .section-wrapper > input,
+  .home-container .section-wrapper button {
+    width: 100%; }
+
+.home-container .location-container {
   text-align: center; }
 
-.home-container > div {
-  margin: 3em 0; }
+.home-container .section-wrapper {
+  margin: 1em 0; }
 
 .home-container .title-container {
-  font-size: 1rem; }
+  margin-bottom: 3em; }
+
+.home-container .title-container h1 {
+  text-align: center; }
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 1024px) {
+  .home-container .section-wrapper {
+    margin: 2em 0; }
+  .home-container button {
+    padding: 2em 0; } }
