--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -51,6 +51,7 @@ $shadow-24dp: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 
   0 11px 15px -7px rgba(0, 0, 0, 0.2);
 
 input:not(.btn) {
+  max-width: 100%;
   padding: 0.75rem 0 0.75rem 1.125rem !important;
   border-radius: 0.2rem !important;
   border: 1px solid #c3c8cd !important;
