--- a/src/App.css
+++ b/src/App.css
@@ -230,7 +230,7 @@ select[multiple] {
   color: #28cc82; }
 
 .error-color {
-  color: #e2550e; }
+  color: red; }
 
 input:not(.btn) {
   max-width: 100%;
@@ -246,16 +246,16 @@ input:hover {
   border: 1px solid #91969b !important; }
 
 input:focus {
-  box-shadow: 0 5px 11px 0 rgba(40, 204, 130, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.06) !important;
+  box-shadow: 0 5px 11px 0 rgba(67, 146, 241, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.06) !important;
   background-color: #ffffff !important;
-  border: solid 1px #28cc82 !important; }
+  border: solid 1px rgba(67, 146, 241, 0.8) !important; }
 
 .button-primary {
-  background: #62c2cf;
+  background: rgba(218, 50, 50, 0.8);
   color: #ffffff;
   border-radius: 0.2rem; }
   .button-primary:hover {
-    background: #52a5b1;
+    background: #da3232;
     color: #ffffff;
     text-decoration: none; }
 
@@ -265,14 +265,14 @@ input:focus {
   color: #555a5f;
   border-radius: 0.2rem; }
   .button-secondary:hover {
-    background: #ee7c00;
+    background: rgba(67, 146, 241, 0.8);
     border: 1px solid transparent;
     color: #ffffff; }
 
 .button-danger {
   background: transparent;
   border: none;
-  color: #e2550e; }
+  color: red; }
 
 .button-tiny {
   padding: 0.6875rem 1.125rem;
@@ -347,7 +347,7 @@ p {
   transition: all 0.1s ease-in-out; }
   p a,
   p a:visited {
-    color: #52a5b1; }
+    color: #4392f1; }
 
 form,
 label,
@@ -408,11 +408,11 @@ figure {
     width: 100%;
     margin: 0; }
   .loading-indicator .progress-bar-indeterminate {
-    background-color: #62c2cf;
+    background-color: rgba(67, 146, 241, 0.8);
     display: -webkit-flex;
     display: flex; }
   .loading-indicator .progress-bar-indeterminate:before {
-    background-color: #52a5b1;
+    background-color: #4392f1;
     content: '';
     -webkit-animation: running-progress 2s cubic-bezier(0.4, 0, 0.2, 1) infinite;
     animation: running-progress 2s cubic-bezier(0.4, 0, 0.2, 1) infinite; }
@@ -501,13 +501,13 @@ header {
         padding: 0;
         font-size: 1rem;
         padding: 1rem 2.8125rem 1.125rem 2.8125rem;
-        background: #62c2cf;
+        background: rgba(67, 146, 241, 0.8);
         color: #ffffff;
         border-radius: 0.2rem; }
         header .user-nav .auth button:hover {
           cursor: pointer; }
         header .user-nav .auth button:hover {
-          background: #52a5b1;
+          background: #4392f1;
           color: #ffffff; }
     header .user-nav:hover {
       cursor: auto; }
@@ -558,7 +558,7 @@ header {
             background: transparent; }
             header .user-nav .dropdown ul.user-dropdown li.main-item.active span,
             header .user-nav .dropdown ul.user-dropdown li.main-item.active a {
-              color: #ee7c00; }
+              color: rgba(218, 50, 50, 0.8); }
           header .user-nav .dropdown ul.user-dropdown li.main-item:hover {
             background: #e6ebf0; }
             header .user-nav .dropdown ul.user-dropdown li.main-item:hover span,
@@ -568,7 +568,7 @@ header {
               background: transparent; }
               header .user-nav .dropdown ul.user-dropdown li.main-item:hover.active span,
               header .user-nav .dropdown ul.user-dropdown li.main-item:hover.active a {
-                color: #ee7c00; }
+                color: rgba(218, 50, 50, 0.8); }
             header .user-nav .dropdown ul.user-dropdown li.main-item:hover .sub-item span,
             header .user-nav .dropdown ul.user-dropdown li.main-item:hover .sub-item a {
               color: #555a5f; }
@@ -621,9 +621,9 @@ header {
               color: #c3c8cd;
               opacity: 0; }
             header .user-nav .dropdown .orgs-submenu-wrap ul.orgs-submenu li.sub-item.selected .text {
-              color: #ee7c00; }
+              color: rgba(218, 50, 50, 0.8); }
             header .user-nav .dropdown .orgs-submenu-wrap ul.orgs-submenu li.sub-item.add-org .text {
-              color: #52a5b1; }
+              color: #4392f1; }
             header .user-nav .dropdown .orgs-submenu-wrap ul.orgs-submenu li.sub-item:hover {
               background: #e6ebf0;
               cursor: pointer; }
@@ -634,15 +634,15 @@ header {
                 color: #91969b; }
                 header .user-nav .dropdown .orgs-submenu-wrap ul.orgs-submenu li.sub-item:hover i:hover {
                   opacity: 1;
-                  color: #52a5b1;
+                  color: #4392f1;
                   cursor: pointer; }
               header .user-nav .dropdown .orgs-submenu-wrap ul.orgs-submenu li.sub-item:hover.add-org .text {
-                color: #52a5b1; }
+                color: #4392f1; }
               header .user-nav .dropdown .orgs-submenu-wrap ul.orgs-submenu li.sub-item:hover.selected {
                 background: transparent;
                 cursor: default; }
                 header .user-nav .dropdown .orgs-submenu-wrap ul.orgs-submenu li.sub-item:hover.selected .text {
-                  color: #ee7c00; }
+                  color: rgba(218, 50, 50, 0.8); }
         header .user-nav .dropdown .orgs-submenu-wrap:hover .orgs-submenu {
           display: block;
           opacity: 1; }
@@ -700,13 +700,13 @@ header {
           padding: 0.75rem 2.109375rem;
           font-size: 0.8125rem;
           border-radius: 0.2rem;
-          background: #62c2cf;
+          background: rgba(67, 146, 241, 0.8);
           color: #ffffff;
           margin-left: 2rem; }
           header #modal .inner form.content button:hover {
             cursor: pointer; }
           header #modal .inner form.content button:hover {
-            background: #52a5b1;
+            background: #4392f1;
             color: #ffffff;
             text-decoration: none; }
 
@@ -734,7 +734,7 @@ div.progress-nav {
       border-bottom: 0.325rem solid transparent;
       color: #c3c8cd; }
       div.progress-nav ul li.active {
-        border-color: #ee7c00;
+        border-color: rgba(218, 50, 50, 0.8);
         color: #2d3237; }
       div.progress-nav ul li .item-content {
         line-height: 1.5rem; }
@@ -777,7 +777,7 @@ div.progress-nav {
           color: #c3c8cd; }
         .page-content aside ul li.active a,
         .page-content aside ul li.active span {
-          color: #ee7c00; }
+          color: rgba(218, 50, 50, 0.8); }
           .page-content aside ul li.active a:hover,
           .page-content aside ul li.active span:hover {
             text-decoration: none; }
@@ -799,7 +799,7 @@ div.success {
   color: #ffffff; }
   div.error.error,
   div.success.error {
-    background: #e2550e; }
+    background: red; }
   div.error.success,
   div.success.success {
     background-color: #28cc82; }
