--- a/src/Routes/Home/Home.css
+++ b/src/Routes/Home/Home.css
@@ -2,7 +2,7 @@
   color: #28cc82; }
 
 .error-color {
-  color: #e2550e; }
+  color: red; }
 
 input:not(.btn) {
   max-width: 100%;
@@ -18,16 +18,16 @@ input:hover {
   border: 1px solid #91969b !important; }
 
 input:focus {
-  box-shadow: 0 5px 11px 0 rgba(40, 204, 130, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.06) !important;
+  box-shadow: 0 5px 11px 0 rgba(67, 146, 241, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.06) !important;
   background-color: #ffffff !important;
-  border: solid 1px #28cc82 !important; }
+  border: solid 1px rgba(67, 146, 241, 0.8) !important; }
 
 .button-primary {
-  background: #62c2cf;
+  background: rgba(218, 50, 50, 0.8);
   color: #ffffff;
   border-radius: 0.2rem; }
   .button-primary:hover {
-    background: #52a5b1;
+    background: #da3232;
     color: #ffffff;
     text-decoration: none; }
 
@@ -37,14 +37,14 @@ input:focus {
   color: #555a5f;
   border-radius: 0.2rem; }
   .button-secondary:hover {
-    background: #ee7c00;
+    background: rgba(67, 146, 241, 0.8);
     border: 1px solid transparent;
     color: #ffffff; }
 
 .button-danger {
   background: transparent;
   border: none;
-  color: #e2550e; }
+  color: red; }
 
 .button-tiny {
   padding: 0.6875rem 1.125rem;
